--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,15 +5,17 @@
     "outDir": "dist",
     "strict": true,
     "lib": ["esnext"],
-    "module": "nodenext",
-    "moduleResolution": "nodenext",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "baseUrl": "./src",
     "paths": {
       "*": ["*"]
-    }
+    },
+    "resolveJsonModule": true,
+    "declaration": true
   },
-  "include": ["src"]
+  "include": ["src/**/*", "node_modules/.prisma/client"]
 }
